Fixed light/dark mode css for kanji card and dialog popups

--- a/src/app/components/css/kanji-card.module.css
+++ b/src/app/components/css/kanji-card.module.css
@@ -49,7 +49,7 @@
 @media (prefers-color-scheme: dark) {
     .card{
         color: white;
-        background-color: #363636;
+        background-color: #2d313a;
         border-color: #1b1c1f;
     }
 
